docs/evidence/2026-10-06/c07-nsgs.json
[
  {
    "defaultSecurityRules": [
      {
        "access": "Allow",
        "description": "Allow inbound traffic from all VMs in VNET",
        "destinationAddressPrefix": "VirtualNetwork",
        "destinationAddressPrefixes": [],
        "destinationPortRange": "*",
        "destinationPortRanges": [],
        "direction": "Inbound",
        "etag": "W/\"71411c75-cb8e-46c0-acdc-c81c84607952\"",
        "id": "/subscriptions/7fb77266-5bb4-4d03-8a91-a744fd38db5c/resourceGroups/mc_rg-nsp-platform-dev_aks-nsp-core-dev_southeastasia/providers/Microsoft.Network/networkSecurityGroups/aks-agentpool-41659155-nsg/defaultSecurityRules/AllowVnetInBound",
        "name": "AllowVnetInBound",
        "priority": 65000,
        "protocol": "*",
        "provisioningState": "Succeeded",
        "resourceGroup": "mc_rg-nsp-platform-dev_aks-nsp-core-dev_southeastasia",
        "sourceAddressPrefix": "VirtualNetwork",
        "sourceAddressPrefixes": [],
        "sourcePortRange": "*",
        "sourcePortRanges": [],
        "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules"
      },
      {
        "access": "Allow",
        "description": "Allow inbound traffic from azure load balancer",
        "destinationAddressPrefix": "*",
        "destinationAddressPrefixes": [],
        "destinationPortRange": "*",
        "destinationPortRanges": [],
        "direction": "Inbound",
        "etag": "W/\"71411c75-cb8e-46c0-acdc-c81c84607952\"",
        "id": "/subscriptions/7fb77266-5bb4-4d03-8a91-a744fd38db5c/resourceGroups/mc_rg-nsp-platform-dev_aks-nsp-core-dev_southeastasia/providers/Microsoft.Network/networkSecurityGroups/aks-agentpool-41659155-nsg/defaultSecurityRules/AllowAzureLoadBalancerInBound",
        "name": "AllowAzureLoadBalancerInBound",
        "priority": 65001,
        "protocol": "*",
        "provisioningState": "Succeeded",
        "resourceGroup": "mc_rg-nsp-platform-dev_aks-nsp-core-dev_southeastasia",
        "sourceAddressPrefix": "AzureLoadBalancer",
        "sourceAddressPrefixes": [],
        "sourcePortRange": "*",
        "sourcePortRanges": [],
        "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules"
      },
      {
        "access": "Deny",
        "description": "Deny all inbound traffic",
        "destinationAddressPrefix": "*",
        "destinationAddressPrefixes": [],
        "destinationPortRange": "*",
        "destinationPortRanges": [],
        "direction": "Inbound",
        "etag": "W/\"71411c75-cb8e-46c0-acdc-c81c84607952\"",
        "id": "/subscriptions/7fb77266-5bb4-4d03-8a91-a744fd38db5c/resourceGroups/mc_rg-nsp-platform-dev_aks-nsp-core-dev_southeastasia/providers/Microsoft.Network/networkSecurityGroups/aks-agentpool-41659155-nsg/defaultSecurityRules/DenyAllInBound",
        "name": "DenyAllInBound",
        "priority": 65500,
        "protocol": "*",
        "provisioningState": "Succeeded",
        "resourceGroup": "mc_rg-nsp-platform-dev_aks-nsp-core-dev_southeastasia",
        "sourceAddressPrefix": "*",
        "sourceAddressPrefixes": [],
        "sourcePortRange": "*",
        "sourcePortRanges": [],
        "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules"
      },
      {
        "access": "Allow",
        "description": "Allow outbound traffic from all VMs to all VMs in VNET",
        "destinationAddressPrefix": "VirtualNetwork",
        "destinationAddressPrefixes": [],
        "destinationPortRange": "*",
        "destinationPortRanges": [],
        "direction": "Outbound",
        "etag": "W/\"71411c75-cb8e-46c0-acdc-c81c84607952\"",
        "id": "/subscriptions/7fb77266-5bb4-4d03-8a91-a744fd38db5c/resourceGroups/mc_rg-nsp-platform-dev_aks-nsp-core-dev_southeastasia/providers/Microsoft.Network/networkSecurityGroups/aks-agentpool-41659155-nsg/defaultSecurityRules/AllowVnetOutBound",
        "name": "AllowVnetOutBound",
        "priority": 65000,
        "protocol": "*",
        "provisioningState": "Succeeded",
        "resourceGroup": "mc_rg-nsp-platform-dev_aks-nsp-core-dev_southeastasia",
        "sourceAddressPrefix": "VirtualNetwork",
        "sourceAddressPrefixes": [],
        "sourcePortRange": "*",
        "sourcePortRanges": [],
        "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules"
      },
      {
        "access": "Allow",
        "description": "Allow outbound traffic from all VMs to Internet",
        "destinationAddressPrefix": "Internet",
        "destinationAddressPrefixes": [],
        "destinationPortRange": "*",
        "destinationPortRanges": [],
        "direction": "Outbound",
        "etag": "W/\"71411c75-cb8e-46c0-acdc-c81c84607952\"",
        "id": "/subscriptions/7fb77266-5bb4-4d03-8a91-a744fd38db5c/resourceGroups/mc_rg-nsp-platform-dev_aks-nsp-core-dev_southeastasia/providers/Microsoft.Network/networkSecurityGroups/aks-agentpool-41659155-nsg/defaultSecurityRules/AllowInternetOutBound",
        "name": "AllowInternetOutBound",
        "priority": 65001,
        "protocol": "*",
        "provisioningState": "Succeeded",
        "resourceGroup": "mc_rg-nsp-platform-dev_aks-nsp-core-dev_southeastasia",
        "sourceAddressPrefix": "*",
        "sourceAddressPrefixes": [],
        "sourcePortRange": "*",
        "sourcePortRanges": [],
        "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules"
      },
      {
        "access": "Deny",
        "description": "Deny all outbound traffic",
        "destinationAddressPrefix": "*",
        "destinationAddressPrefixes": [],
        "destinationPortRange": "*",
        "destinationPortRanges": [],
        "direction": "Outbound",
        "etag": "W/\"71411c75-cb8e-46c0-acdc-c81c84607952\"",
        "id": "/subscriptions/7fb77266-5bb4-4d03-8a91-a744fd38db5c/resourceGroups/mc_rg-nsp-platform-dev_aks-nsp-core-dev_southeastasia/providers/Microsoft.Network/networkSecurityGroups/aks-agentpool-41659155-nsg/defaultSecurityRules/DenyAllOutBound",
        "name": "DenyAllOutBound",
        "priority": 65500,
        "protocol": "*",
        "provisioningState": "Succeeded",
        "resourceGroup": "mc_rg-nsp-platform-dev_aks-nsp-core-dev_southeastasia",
        "sourceAddressPrefix": "*",
        "sourceAddressPrefixes": [],
        "sourcePortRange": "*",
        "sourcePortRanges": [],
        "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules"
      }
    ],
    "etag": "W/\"71411c75-cb8e-46c0-acdc-c81c84607952\"",
    "id": "/subscriptions/7fb77266-5bb4-4d03-8a91-a744fd38db5c/resourceGroups/mc_rg-nsp-platform-dev_aks-nsp-core-dev_southeastasia/providers/Microsoft.Network/networkSecurityGroups/aks-agentpool-41659155-nsg",
    "location": "southeastasia",
    "name": "aks-agentpool-41659155-nsg",
    "networkInterfaces": [
      {
        "id": "/subscriptions/7fb77266-5bb4-4d03-8a91-a744fd38db5c/resourceGroups/MC_RG-NSP-PLATFORM-DEV_AKS-NSP-CORE-DEV_SOUTHEASTASIA/PROVIDERS/MICROSOFT.COMPUTE/VIRTUALMACHINESCALESETS/AKS-SYSTEM-11145859-VMSS/VIRTUALMACHINES/0/NETWORKINTERFACES/AKS-SYSTEM-11145859-VMSS",
        "resourceGroup": "MC_RG-NSP-PLATFORM-DEV_AKS-NSP-CORE-DEV_SOUTHEASTASIA"
      },
      {
        "id": "/subscriptions/7fb77266-5bb4-4d03-8a91-a744fd38db5c/resourceGroups/MC_RG-NSP-PLATFORM-DEV_AKS-NSP-CORE-DEV_SOUTHEASTASIA/PROVIDERS/MICROSOFT.COMPUTE/VIRTUALMACHINESCALESETS/AKS-SYSTEM-11145859-VMSS/VIRTUALMACHINES/1/NETWORKINTERFACES/AKS-SYSTEM-11145859-VMSS",
        "resourceGroup": "MC_RG-NSP-PLATFORM-DEV_AKS-NSP-CORE-DEV_SOUTHEASTASIA"
      }
    ],
    "provisioningState": "Succeeded",
    "resourceGroup": "mc_rg-nsp-platform-dev_aks-nsp-core-dev_southeastasia",
    "resourceGuid": "ee8fc139-7004-4084-ae91-80fad58f232f",
    "securityRules": [
      {
        "access": "Allow",
        "destinationAddressPrefix": "20.44.239.49",
        "destinationAddressPrefixes": [],
        "destinationPortRanges": [
          "80"
        ],
        "direction": "Inbound",
        "etag": "W/\"71411c75-cb8e-46c0-acdc-c81c84607952\"",
        "id": "/subscriptions/7fb77266-5bb4-4d03-8a91-a744fd38db5c/resourceGroups/mc_rg-nsp-platform-dev_aks-nsp-core-dev_southeastasia/providers/Microsoft.Network/networkSecurityGroups/aks-agentpool-41659155-nsg/securityRules/k8s-azure-lb_allow_IPv4_d39272f7f57ed937951650d93992ad77",
        "name": "k8s-azure-lb_allow_IPv4_d39272f7f57ed937951650d93992ad77",
        "priority": 500,
        "protocol": "Tcp",
        "provisioningState": "Succeeded",
        "resourceGroup": "mc_rg-nsp-platform-dev_aks-nsp-core-dev_southeastasia",
        "sourceAddressPrefix": "Internet",
        "sourceAddressPrefixes": [],
        "sourcePortRange": "*",
        "sourcePortRanges": [],
        "type": "Microsoft.Network/networkSecurityGroups/securityRules"
      }
    ],
    "tags": {
      "aks-managed-cluster-name": "aks-nsp-core-dev",
      "aks-managed-cluster-rg": "rg-nsp-platform-dev"
    },
    "type": "Microsoft.Network/networkSecurityGroups"
  },
  {
    "defaultSecurityRules": [
      {
        "access": "Allow",
        "description": "Allow inbound traffic from all VMs in VNET",
        "destinationAddressPrefix": "VirtualNetwork",
        "destinationAddressPrefixes": [],
        "destinationPortRange": "*",
        "destinationPortRanges": [],
        "direction": "Inbound",
        "etag": "W/\"3d9012d0-0e18-4381-90ba-da2320e1871d\"",
        "id": "/subscriptions/7fb77266-5bb4-4d03-8a91-a744fd38db5c/resourceGroups/rg-nsp-network-dev/providers/Microsoft.Network/networkSecurityGroups/nsg-nsp-data-dev/defaultSecurityRules/AllowVnetInBound",
        "name": "AllowVnetInBound",
        "priority": 65000,
        "protocol": "*",
        "provisioningState": "Succeeded",
        "resourceGroup": "rg-nsp-network-dev",
        "sourceAddressPrefix": "VirtualNetwork",
        "sourceAddressPrefixes": [],
        "sourcePortRange": "*",
        "sourcePortRanges": [],
        "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules"
      },
      {
        "access": "Allow",
        "description": "Allow inbound traffic from azure load balancer",
        "destinationAddressPrefix": "*",
        "destinationAddressPrefixes": [],
        "destinationPortRange": "*",
        "destinationPortRanges": [],
        "direction": "Inbound",
        "etag": "W/\"3d9012d0-0e18-4381-90ba-da2320e1871d\"",
        "id": "/subscriptions/7fb77266-5bb4-4d03-8a91-a744fd38db5c/resourceGroups/rg-nsp-network-dev/providers/Microsoft.Network/networkSecurityGroups/nsg-nsp-data-dev/defaultSecurityRules/AllowAzureLoadBalancerInBound",
        "name": "AllowAzureLoadBalancerInBound",
        "priority": 65001,
        "protocol": "*",
        "provisioningState": "Succeeded",
        "resourceGroup": "rg-nsp-network-dev",
        "sourceAddressPrefix": "AzureLoadBalancer",
        "sourceAddressPrefixes": [],
        "sourcePortRange": "*",
        "sourcePortRanges": [],
        "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules"
      },
      {
        "access": "Deny",
        "description": "Deny all inbound traffic",
        "destinationAddressPrefix": "*",
        "destinationAddressPrefixes": [],
        "destinationPortRange": "*",
        "destinationPortRanges": [],
        "direction": "Inbound",
        "etag": "W/\"3d9012d0-0e18-4381-90ba-da2320e1871d\"",
        "id": "/subscriptions/7fb77266-5bb4-4d03-8a91-a744fd38db5c/resourceGroups/rg-nsp-network-dev/providers/Microsoft.Network/networkSecurityGroups/nsg-nsp-data-dev/defaultSecurityRules/DenyAllInBound",
        "name": "DenyAllInBound",
        "priority": 65500,
        "protocol": "*",
        "provisioningState": "Succeeded",
        "resourceGroup": "rg-nsp-network-dev",
        "sourceAddressPrefix": "*",
        "sourceAddressPrefixes": [],
        "sourcePortRange": "*",
        "sourcePortRanges": [],
        "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules"
      },
      {
        "access": "Allow",
        "description": "Allow outbound traffic from all VMs to all VMs in VNET",
        "destinationAddressPrefix": "VirtualNetwork",
        "destinationAddressPrefixes": [],
        "destinationPortRange": "*",
        "destinationPortRanges": [],
        "direction": "Outbound",
        "etag": "W/\"3d9012d0-0e18-4381-90ba-da2320e1871d\"",
        "id": "/subscriptions/7fb77266-5bb4-4d03-8a91-a744fd38db5c/resourceGroups/rg-nsp-network-dev/providers/Microsoft.Network/networkSecurityGroups/nsg-nsp-data-dev/defaultSecurityRules/AllowVnetOutBound",
        "name": "AllowVnetOutBound",
        "priority": 65000,
        "protocol": "*",
        "provisioningState": "Succeeded",
        "resourceGroup": "rg-nsp-network-dev",
        "sourceAddressPrefix": "VirtualNetwork",
        "sourceAddressPrefixes": [],
        "sourcePortRange": "*",
        "sourcePortRanges": [],
        "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules"
      },
      {
        "access": "Allow",
        "description": "Allow outbound traffic from all VMs to Internet",
        "destinationAddressPrefix": "Internet",
        "destinationAddressPrefixes": [],
        "destinationPortRange": "*",
        "destinationPortRanges": [],
        "direction": "Outbound",
        "etag": "W/\"3d9012d0-0e18-4381-90ba-da2320e1871d\"",
        "id": "/subscriptions/7fb77266-5bb4-4d03-8a91-a744fd38db5c/resourceGroups/rg-nsp-network-dev/providers/Microsoft.Network/networkSecurityGroups/nsg-nsp-data-dev/defaultSecurityRules/AllowInternetOutBound",
        "name": "AllowInternetOutBound",
        "priority": 65001,
        "protocol": "*",
        "provisioningState": "Succeeded",
        "resourceGroup": "rg-nsp-network-dev",
        "sourceAddressPrefix": "*",
        "sourceAddressPrefixes": [],
        "sourcePortRange": "*",
        "sourcePortRanges": [],
        "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules"
      },
      {
        "access": "Deny",
        "description": "Deny all outbound traffic",
        "destinationAddressPrefix": "*",
        "destinationAddressPrefixes": [],
        "destinationPortRange": "*",
        "destinationPortRanges": [],
        "direction": "Outbound",
        "etag": "W/\"3d9012d0-0e18-4381-90ba-da2320e1871d\"",
        "id": "/subscriptions/7fb77266-5bb4-4d03-8a91-a744fd38db5c/resourceGroups/rg-nsp-network-dev/providers/Microsoft.Network/networkSecurityGroups/nsg-nsp-data-dev/defaultSecurityRules/DenyAllOutBound",
        "name": "DenyAllOutBound",
        "priority": 65500,
        "protocol": "*",
        "provisioningState": "Succeeded",
        "resourceGroup": "rg-nsp-network-dev",
        "sourceAddressPrefix": "*",
        "sourceAddressPrefixes": [],
        "sourcePortRange": "*",
        "sourcePortRanges": [],
        "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules"
      }
    ],
    "etag": "W/\"3d9012d0-0e18-4381-90ba-da2320e1871d\"",
    "id": "/subscriptions/7fb77266-5bb4-4d03-8a91-a744fd38db5c/resourceGroups/rg-nsp-network-dev/providers/Microsoft.Network/networkSecurityGroups/nsg-nsp-data-dev",
    "location": "southeastasia",
    "name": "nsg-nsp-data-dev",
    "provisioningState": "Succeeded",
    "resourceGroup": "rg-nsp-network-dev",
    "resourceGuid": "19ca19d5-6890-45ed-8a89-186b8b713aa0",
    "securityRules": [
      {
        "access": "Allow",
        "destinationAddressPrefix": "*",
        "destinationAddressPrefixes": [],
        "destinationPortRange": "5432",
        "destinationPortRanges": [],
        "direction": "Inbound",
        "etag": "W/\"3d9012d0-0e18-4381-90ba-da2320e1871d\"",
        "id": "/subscriptions/7fb77266-5bb4-4d03-8a91-a744fd38db5c/resourceGroups/rg-nsp-network-dev/providers/Microsoft.Network/networkSecurityGroups/nsg-nsp-data-dev/securityRules/AllowAKSToPostgres",
        "name": "AllowAKSToPostgres",
        "priority": 1000,
        "protocol": "Tcp",
        "provisioningState": "Succeeded",
        "resourceGroup": "rg-nsp-network-dev",
        "sourceAddressPrefix": "10.1.0.0/24",
        "sourceAddressPrefixes": [],
        "sourcePortRange": "*",
        "sourcePortRanges": [],
        "type": "Microsoft.Network/networkSecurityGroups/securityRules"
      },
      {
        "access": "Deny",
        "destinationAddressPrefix": "VirtualNetwork",
        "destinationAddressPrefixes": [],
        "destinationPortRange": "*",
        "destinationPortRanges": [],
        "direction": "Inbound",
        "etag": "W/\"3d9012d0-0e18-4381-90ba-da2320e1871d\"",
        "id": "/subscriptions/7fb77266-5bb4-4d03-8a91-a744fd38db5c/resourceGroups/rg-nsp-network-dev/providers/Microsoft.Network/networkSecurityGroups/nsg-nsp-data-dev/securityRules/DenyAll",
        "name": "DenyAll",
        "priority": 4096,
        "protocol": "*",
        "provisioningState": "Succeeded",
        "resourceGroup": "rg-nsp-network-dev",
        "sourceAddressPrefix": "VirtualNetwork",
        "sourceAddressPrefixes": [],
        "sourcePortRange": "*",
        "sourcePortRanges": [],
        "type": "Microsoft.Network/networkSecurityGroups/securityRules"
      }
    ],
    "subnets": [
      {
        "id": "/subscriptions/7fb77266-5bb4-4d03-8a91-a744fd38db5c/resourceGroups/RG-NSP-NETWORK-DEV/providers/Microsoft.Network/virtualNetworks/VNET-NSP-SPOKE-DEV/subnets/SNET-DATA",
        "resourceGroup": "RG-NSP-NETWORK-DEV"
      }
    ],
    "tags": {},
    "type": "Microsoft.Network/networkSecurityGroups"
  },
  {
    "defaultSecurityRules": [
      {
        "access": "Allow",
        "description": "Allow inbound traffic from all VMs in VNET",
        "destinationAddressPrefix": "VirtualNetwork",
        "destinationAddressPrefixes": [],
        "destinationPortRange": "*",
        "destinationPortRanges": [],
        "direction": "Inbound",
        "etag": "W/\"785b7ff6-6a65-4d4b-815d-46cbc0130445\"",
        "id": "/subscriptions/7fb77266-5bb4-4d03-8a91-a744fd38db5c/resourceGroups/rg-nsp-network-dev/providers/Microsoft.Network/networkSecurityGroups/nsg-nsp-mgmt-dev/defaultSecurityRules/AllowVnetInBound",
        "name": "AllowVnetInBound",
        "priority": 65000,
        "protocol": "*",
        "provisioningState": "Succeeded",
        "resourceGroup": "rg-nsp-network-dev",
        "sourceAddressPrefix": "VirtualNetwork",
        "sourceAddressPrefixes": [],
        "sourcePortRange": "*",
        "sourcePortRanges": [],
        "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules"
      },
      {
        "access": "Allow",
        "description": "Allow inbound traffic from azure load balancer",
        "destinationAddressPrefix": "*",
        "destinationAddressPrefixes": [],
        "destinationPortRange": "*",
        "destinationPortRanges": [],
        "direction": "Inbound",
        "etag": "W/\"785b7ff6-6a65-4d4b-815d-46cbc0130445\"",
        "id": "/subscriptions/7fb77266-5bb4-4d03-8a91-a744fd38db5c/resourceGroups/rg-nsp-network-dev/providers/Microsoft.Network/networkSecurityGroups/nsg-nsp-mgmt-dev/defaultSecurityRules/AllowAzureLoadBalancerInBound",
        "name": "AllowAzureLoadBalancerInBound",
        "priority": 65001,
        "protocol": "*",
        "provisioningState": "Succeeded",
        "resourceGroup": "rg-nsp-network-dev",
        "sourceAddressPrefix": "AzureLoadBalancer",
        "sourceAddressPrefixes": [],
        "sourcePortRange": "*",
        "sourcePortRanges": [],
        "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules"
      },
      {
        "access": "Deny",
        "description": "Deny all inbound traffic",
        "destinationAddressPrefix": "*",
        "destinationAddressPrefixes": [],
        "destinationPortRange": "*",
        "destinationPortRanges": [],
        "direction": "Inbound",
        "etag": "W/\"785b7ff6-6a65-4d4b-815d-46cbc0130445\"",
        "id": "/subscriptions/7fb77266-5bb4-4d03-8a91-a744fd38db5c/resourceGroups/rg-nsp-network-dev/providers/Microsoft.Network/networkSecurityGroups/nsg-nsp-mgmt-dev/defaultSecurityRules/DenyAllInBound",
        "name": "DenyAllInBound",
        "priority": 65500,
        "protocol": "*",
        "provisioningState": "Succeeded",
        "resourceGroup": "rg-nsp-network-dev",
        "sourceAddressPrefix": "*",
        "sourceAddressPrefixes": [],
        "sourcePortRange": "*",
        "sourcePortRanges": [],
        "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules"
      },
      {
        "access": "Allow",
        "description": "Allow outbound traffic from all VMs to all VMs in VNET",
        "destinationAddressPrefix": "VirtualNetwork",
        "destinationAddressPrefixes": [],
        "destinationPortRange": "*",
        "destinationPortRanges": [],
        "direction": "Outbound",
        "etag": "W/\"785b7ff6-6a65-4d4b-815d-46cbc0130445\"",
        "id": "/subscriptions/7fb77266-5bb4-4d03-8a91-a744fd38db5c/resourceGroups/rg-nsp-network-dev/providers/Microsoft.Network/networkSecurityGroups/nsg-nsp-mgmt-dev/defaultSecurityRules/AllowVnetOutBound",
        "name": "AllowVnetOutBound",
        "priority": 65000,
        "protocol": "*",
        "provisioningState": "Succeeded",
        "resourceGroup": "rg-nsp-network-dev",
        "sourceAddressPrefix": "VirtualNetwork",
        "sourceAddressPrefixes": [],
        "sourcePortRange": "*",
        "sourcePortRanges": [],
        "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules"
      },
      {
        "access": "Allow",
        "description": "Allow outbound traffic from all VMs to Internet",
        "destinationAddressPrefix": "Internet",
        "destinationAddressPrefixes": [],
        "destinationPortRange": "*",
        "destinationPortRanges": [],
        "direction": "Outbound",
        "etag": "W/\"785b7ff6-6a65-4d4b-815d-46cbc0130445\"",
        "id": "/subscriptions/7fb77266-5bb4-4d03-8a91-a744fd38db5c/resourceGroups/rg-nsp-network-dev/providers/Microsoft.Network/networkSecurityGroups/nsg-nsp-mgmt-dev/defaultSecurityRules/AllowInternetOutBound",
        "name": "AllowInternetOutBound",
        "priority": 65001,
        "protocol": "*",
        "provisioningState": "Succeeded",
        "resourceGroup": "rg-nsp-network-dev",
        "sourceAddressPrefix": "*",
        "sourceAddressPrefixes": [],
        "sourcePortRange": "*",
        "sourcePortRanges": [],
        "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules"
      },
      {
        "access": "Deny",
        "description": "Deny all outbound traffic",
        "destinationAddressPrefix": "*",
        "destinationAddressPrefixes": [],
        "destinationPortRange": "*",
        "destinationPortRanges": [],
        "direction": "Outbound",
        "etag": "W/\"785b7ff6-6a65-4d4b-815d-46cbc0130445\"",
        "id": "/subscriptions/7fb77266-5bb4-4d03-8a91-a744fd38db5c/resourceGroups/rg-nsp-network-dev/providers/Microsoft.Network/networkSecurityGroups/nsg-nsp-mgmt-dev/defaultSecurityRules/DenyAllOutBound",
        "name": "DenyAllOutBound",
        "priority": 65500,
        "protocol": "*",
        "provisioningState": "Succeeded",
        "resourceGroup": "rg-nsp-network-dev",
        "sourceAddressPrefix": "*",
        "sourceAddressPrefixes": [],
        "sourcePortRange": "*",
        "sourcePortRanges": [],
        "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules"
      }
    ],
    "etag": "W/\"785b7ff6-6a65-4d4b-815d-46cbc0130445\"",
    "id": "/subscriptions/7fb77266-5bb4-4d03-8a91-a744fd38db5c/resourceGroups/rg-nsp-network-dev/providers/Microsoft.Network/networkSecurityGroups/nsg-nsp-mgmt-dev",
    "location": "southeastasia",
    "name": "nsg-nsp-mgmt-dev",
    "provisioningState": "Succeeded",
    "resourceGroup": "rg-nsp-network-dev",
    "resourceGuid": "871007fc-0ab7-4286-a579-e83fe608a154",
    "securityRules": [
      {
        "access": "Deny",
        "destinationAddressPrefix": "VirtualNetwork",
        "destinationAddressPrefixes": [],
        "destinationPortRange": "*",
        "destinationPortRanges": [],
        "direction": "Inbound",
        "etag": "W/\"785b7ff6-6a65-4d4b-815d-46cbc0130445\"",
        "id": "/subscriptions/7fb77266-5bb4-4d03-8a91-a744fd38db5c/resourceGroups/rg-nsp-network-dev/providers/Microsoft.Network/networkSecurityGroups/nsg-nsp-mgmt-dev/securityRules/DenyAll",
        "name": "DenyAll",
        "priority": 4096,
        "protocol": "*",
        "provisioningState": "Succeeded",
        "resourceGroup": "rg-nsp-network-dev",
        "sourceAddressPrefix": "VirtualNetwork",
        "sourceAddressPrefixes": [],
        "sourcePortRange": "*",
        "sourcePortRanges": [],
        "type": "Microsoft.Network/networkSecurityGroups/securityRules"
      }
    ],
    "subnets": [
      {
        "id": "/subscriptions/7fb77266-5bb4-4d03-8a91-a744fd38db5c/resourceGroups/RG-NSP-NETWORK-DEV/providers/Microsoft.Network/virtualNetworks/VNET-NSP-HUB-DEV/subnets/SNET-MGMT",
        "resourceGroup": "RG-NSP-NETWORK-DEV"
      }
    ],
    "tags": {},
    "type": "Microsoft.Network/networkSecurityGroups"
  },
  {
    "defaultSecurityRules": [
      {
        "access": "Allow",
        "description": "Allow inbound traffic from all VMs in VNET",
        "destinationAddressPrefix": "VirtualNetwork",
        "destinationAddressPrefixes": [],
        "destinationPortRange": "*",
        "destinationPortRanges": [],
        "direction": "Inbound",
        "etag": "W/\"7b27bce8-8e73-4506-be44-11236055712a\"",
        "id": "/subscriptions/7fb77266-5bb4-4d03-8a91-a744fd38db5c/resourceGroups/rg-nsp-network-dev/providers/Microsoft.Network/networkSecurityGroups/nsg-nsp-pe-dev/defaultSecurityRules/AllowVnetInBound",
        "name": "AllowVnetInBound",
        "priority": 65000,
        "protocol": "*",
        "provisioningState": "Succeeded",
        "resourceGroup": "rg-nsp-network-dev",
        "sourceAddressPrefix": "VirtualNetwork",
        "sourceAddressPrefixes": [],
        "sourcePortRange": "*",
        "sourcePortRanges": [],
        "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules"
      },
      {
        "access": "Allow",
        "description": "Allow inbound traffic from azure load balancer",
        "destinationAddressPrefix": "*",
        "destinationAddressPrefixes": [],
        "destinationPortRange": "*",
        "destinationPortRanges": [],
        "direction": "Inbound",
        "etag": "W/\"7b27bce8-8e73-4506-be44-11236055712a\"",
        "id": "/subscriptions/7fb77266-5bb4-4d03-8a91-a744fd38db5c/resourceGroups/rg-nsp-network-dev/providers/Microsoft.Network/networkSecurityGroups/nsg-nsp-pe-dev/defaultSecurityRules/AllowAzureLoadBalancerInBound",
        "name": "AllowAzureLoadBalancerInBound",
        "priority": 65001,
        "protocol": "*",
        "provisioningState": "Succeeded",
        "resourceGroup": "rg-nsp-network-dev",
        "sourceAddressPrefix": "AzureLoadBalancer",
        "sourceAddressPrefixes": [],
        "sourcePortRange": "*",
        "sourcePortRanges": [],
        "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules"
      },
      {
        "access": "Deny",
        "description": "Deny all inbound traffic",
        "destinationAddressPrefix": "*",
        "destinationAddressPrefixes": [],
        "destinationPortRange": "*",
        "destinationPortRanges": [],
        "direction": "Inbound",
        "etag": "W/\"7b27bce8-8e73-4506-be44-11236055712a\"",
        "id": "/subscriptions/7fb77266-5bb4-4d03-8a91-a744fd38db5c/resourceGroups/rg-nsp-network-dev/providers/Microsoft.Network/networkSecurityGroups/nsg-nsp-pe-dev/defaultSecurityRules/DenyAllInBound",
        "name": "DenyAllInBound",
        "priority": 65500,
        "protocol": "*",
        "provisioningState": "Succeeded",
        "resourceGroup": "rg-nsp-network-dev",
        "sourceAddressPrefix": "*",
        "sourceAddressPrefixes": [],
        "sourcePortRange": "*",
        "sourcePortRanges": [],
        "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules"
      },
      {
        "access": "Allow",
        "description": "Allow outbound traffic from all VMs to all VMs in VNET",
        "destinationAddressPrefix": "VirtualNetwork",
        "destinationAddressPrefixes": [],
        "destinationPortRange": "*",
        "destinationPortRanges": [],
        "direction": "Outbound",
        "etag": "W/\"7b27bce8-8e73-4506-be44-11236055712a\"",
        "id": "/subscriptions/7fb77266-5bb4-4d03-8a91-a744fd38db5c/resourceGroups/rg-nsp-network-dev/providers/Microsoft.Network/networkSecurityGroups/nsg-nsp-pe-dev/defaultSecurityRules/AllowVnetOutBound",
        "name": "AllowVnetOutBound",
        "priority": 65000,
        "protocol": "*",
        "provisioningState": "Succeeded",
        "resourceGroup": "rg-nsp-network-dev",
        "sourceAddressPrefix": "VirtualNetwork",
        "sourceAddressPrefixes": [],
        "sourcePortRange": "*",
        "sourcePortRanges": [],
        "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules"
      },
      {
        "access": "Allow",
        "description": "Allow outbound traffic from all VMs to Internet",
        "destinationAddressPrefix": "Internet",
        "destinationAddressPrefixes": [],
        "destinationPortRange": "*",
        "destinationPortRanges": [],
        "direction": "Outbound",
        "etag": "W/\"7b27bce8-8e73-4506-be44-11236055712a\"",
        "id": "/subscriptions/7fb77266-5bb4-4d03-8a91-a744fd38db5c/resourceGroups/rg-nsp-network-dev/providers/Microsoft.Network/networkSecurityGroups/nsg-nsp-pe-dev/defaultSecurityRules/AllowInternetOutBound",
        "name": "AllowInternetOutBound",
        "priority": 65001,
        "protocol": "*",
        "provisioningState": "Succeeded",
        "resourceGroup": "rg-nsp-network-dev",
        "sourceAddressPrefix": "*",
        "sourceAddressPrefixes": [],
        "sourcePortRange": "*",
        "sourcePortRanges": [],
        "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules"
      },
      {
        "access": "Deny",
        "description": "Deny all outbound traffic",
        "destinationAddressPrefix": "*",
        "destinationAddressPrefixes": [],
        "destinationPortRange": "*",
        "destinationPortRanges": [],
        "direction": "Outbound",
        "etag": "W/\"7b27bce8-8e73-4506-be44-11236055712a\"",
        "id": "/subscriptions/7fb77266-5bb4-4d03-8a91-a744fd38db5c/resourceGroups/rg-nsp-network-dev/providers/Microsoft.Network/networkSecurityGroups/nsg-nsp-pe-dev/defaultSecurityRules/DenyAllOutBound",
        "name": "DenyAllOutBound",
        "priority": 65500,
        "protocol": "*",
        "provisioningState": "Succeeded",
        "resourceGroup": "rg-nsp-network-dev",
        "sourceAddressPrefix": "*",
        "sourceAddressPrefixes": [],
        "sourcePortRange": "*",
        "sourcePortRanges": [],
        "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules"
      }
    ],
    "etag": "W/\"7b27bce8-8e73-4506-be44-11236055712a\"",
    "id": "/subscriptions/7fb77266-5bb4-4d03-8a91-a744fd38db5c/resourceGroups/rg-nsp-network-dev/providers/Microsoft.Network/networkSecurityGroups/nsg-nsp-pe-dev",
    "location": "southeastasia",
    "name": "nsg-nsp-pe-dev",
    "provisioningState": "Succeeded",
    "resourceGroup": "rg-nsp-network-dev",
    "resourceGuid": "7404c580-2147-477b-824d-7db385fd8dd7",
    "securityRules": [
      {
        "access": "Deny",
        "destinationAddressPrefix": "VirtualNetwork",
        "destinationAddressPrefixes": [],
        "destinationPortRange": "*",
        "destinationPortRanges": [],
        "direction": "Inbound",
        "etag": "W/\"7b27bce8-8e73-4506-be44-11236055712a\"",
        "id": "/subscriptions/7fb77266-5bb4-4d03-8a91-a744fd38db5c/resourceGroups/rg-nsp-network-dev/providers/Microsoft.Network/networkSecurityGroups/nsg-nsp-pe-dev/securityRules/DenyAll",
        "name": "DenyAll",
        "priority": 4096,
        "protocol": "*",
        "provisioningState": "Succeeded",
        "resourceGroup": "rg-nsp-network-dev",
        "sourceAddressPrefix": "VirtualNetwork",
        "sourceAddressPrefixes": [],
        "sourcePortRange": "*",
        "sourcePortRanges": [],
        "type": "Microsoft.Network/networkSecurityGroups/securityRules"
      }
    ],
    "subnets": [
      {
        "id": "/subscriptions/7fb77266-5bb4-4d03-8a91-a744fd38db5c/resourceGroups/RG-NSP-NETWORK-DEV/providers/Microsoft.Network/virtualNetworks/VNET-NSP-SPOKE-DEV/subnets/SNET-PE",
        "resourceGroup": "RG-NSP-NETWORK-DEV"
      }
    ],
    "tags": {},
    "type": "Microsoft.Network/networkSecurityGroups"
  },
  {
    "defaultSecurityRules": [
      {
        "access": "Allow",
        "description": "Allow inbound traffic from all VMs in VNET",
        "destinationAddressPrefix": "VirtualNetwork",
        "destinationAddressPrefixes": [],
        "destinationPortRange": "*",
        "destinationPortRanges": [],
        "direction": "Inbound",
        "etag": "W/\"697feb06-4820-4b92-940f-513cec4f8619\"",
        "id": "/subscriptions/7fb77266-5bb4-4d03-8a91-a744fd38db5c/resourceGroups/rg-nsp-network-dev/providers/Microsoft.Network/networkSecurityGroups/nsg-nsp-test-dev/defaultSecurityRules/AllowVnetInBound",
        "name": "AllowVnetInBound",
        "priority": 65000,
        "protocol": "*",
        "provisioningState": "Succeeded",
        "resourceGroup": "rg-nsp-network-dev",
        "sourceAddressPrefix": "VirtualNetwork",
        "sourceAddressPrefixes": [],
        "sourcePortRange": "*",
        "sourcePortRanges": [],
        "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules"
      },
      {
        "access": "Allow",
        "description": "Allow inbound traffic from azure load balancer",
        "destinationAddressPrefix": "*",
        "destinationAddressPrefixes": [],
        "destinationPortRange": "*",
        "destinationPortRanges": [],
        "direction": "Inbound",
        "etag": "W/\"697feb06-4820-4b92-940f-513cec4f8619\"",
        "id": "/subscriptions/7fb77266-5bb4-4d03-8a91-a744fd38db5c/resourceGroups/rg-nsp-network-dev/providers/Microsoft.Network/networkSecurityGroups/nsg-nsp-test-dev/defaultSecurityRules/AllowAzureLoadBalancerInBound",
        "name": "AllowAzureLoadBalancerInBound",
        "priority": 65001,
        "protocol": "*",
        "provisioningState": "Succeeded",
        "resourceGroup": "rg-nsp-network-dev",
        "sourceAddressPrefix": "AzureLoadBalancer",
        "sourceAddressPrefixes": [],
        "sourcePortRange": "*",
        "sourcePortRanges": [],
        "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules"
      },
      {
        "access": "Deny",
        "description": "Deny all inbound traffic",
        "destinationAddressPrefix": "*",
        "destinationAddressPrefixes": [],
        "destinationPortRange": "*",
        "destinationPortRanges": [],
        "direction": "Inbound",
        "etag": "W/\"697feb06-4820-4b92-940f-513cec4f8619\"",
        "id": "/subscriptions/7fb77266-5bb4-4d03-8a91-a744fd38db5c/resourceGroups/rg-nsp-network-dev/providers/Microsoft.Network/networkSecurityGroups/nsg-nsp-test-dev/defaultSecurityRules/DenyAllInBound",
        "name": "DenyAllInBound",
        "priority": 65500,
        "protocol": "*",
        "provisioningState": "Succeeded",
        "resourceGroup": "rg-nsp-network-dev",
        "sourceAddressPrefix": "*",
        "sourceAddressPrefixes": [],
        "sourcePortRange": "*",
        "sourcePortRanges": [],
        "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules"
      },
      {
        "access": "Allow",
        "description": "Allow outbound traffic from all VMs to all VMs in VNET",
        "destinationAddressPrefix": "VirtualNetwork",
        "destinationAddressPrefixes": [],
        "destinationPortRange": "*",
        "destinationPortRanges": [],
        "direction": "Outbound",
        "etag": "W/\"697feb06-4820-4b92-940f-513cec4f8619\"",
        "id": "/subscriptions/7fb77266-5bb4-4d03-8a91-a744fd38db5c/resourceGroups/rg-nsp-network-dev/providers/Microsoft.Network/networkSecurityGroups/nsg-nsp-test-dev/defaultSecurityRules/AllowVnetOutBound",
        "name": "AllowVnetOutBound",
        "priority": 65000,
        "protocol": "*",
        "provisioningState": "Succeeded",
        "resourceGroup": "rg-nsp-network-dev",
        "sourceAddressPrefix": "VirtualNetwork",
        "sourceAddressPrefixes": [],
        "sourcePortRange": "*",
        "sourcePortRanges": [],
        "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules"
      },
      {
        "access": "Allow",
        "description": "Allow outbound traffic from all VMs to Internet",
        "destinationAddressPrefix": "Internet",
        "destinationAddressPrefixes": [],
        "destinationPortRange": "*",
        "destinationPortRanges": [],
        "direction": "Outbound",
        "etag": "W/\"697feb06-4820-4b92-940f-513cec4f8619\"",
        "id": "/subscriptions/7fb77266-5bb4-4d03-8a91-a744fd38db5c/resourceGroups/rg-nsp-network-dev/providers/Microsoft.Network/networkSecurityGroups/nsg-nsp-test-dev/defaultSecurityRules/AllowInternetOutBound",
        "name": "AllowInternetOutBound",
        "priority": 65001,
        "protocol": "*",
        "provisioningState": "Succeeded",
        "resourceGroup": "rg-nsp-network-dev",
        "sourceAddressPrefix": "*",
        "sourceAddressPrefixes": [],
        "sourcePortRange": "*",
        "sourcePortRanges": [],
        "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules"
      },
      {
        "access": "Deny",
        "description": "Deny all outbound traffic",
        "destinationAddressPrefix": "*",
        "destinationAddressPrefixes": [],
        "destinationPortRange": "*",
        "destinationPortRanges": [],
        "direction": "Outbound",
        "etag": "W/\"697feb06-4820-4b92-940f-513cec4f8619\"",
        "id": "/subscriptions/7fb77266-5bb4-4d03-8a91-a744fd38db5c/resourceGroups/rg-nsp-network-dev/providers/Microsoft.Network/networkSecurityGroups/nsg-nsp-test-dev/defaultSecurityRules/DenyAllOutBound",
        "name": "DenyAllOutBound",
        "priority": 65500,
        "protocol": "*",
        "provisioningState": "Succeeded",
        "resourceGroup": "rg-nsp-network-dev",
        "sourceAddressPrefix": "*",
        "sourceAddressPrefixes": [],
        "sourcePortRange": "*",
        "sourcePortRanges": [],
        "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules"
      }
    ],
    "etag": "W/\"697feb06-4820-4b92-940f-513cec4f8619\"",
    "id": "/subscriptions/7fb77266-5bb4-4d03-8a91-a744fd38db5c/resourceGroups/rg-nsp-network-dev/providers/Microsoft.Network/networkSecurityGroups/nsg-nsp-test-dev",
    "location": "southeastasia",
    "name": "nsg-nsp-test-dev",
    "provisioningState": "Succeeded",
    "resourceGroup": "rg-nsp-network-dev",
    "resourceGuid": "65018939-1c3a-43e1-acc6-338be299f61a",
    "securityRules": [
      {
        "access": "Deny",
        "destinationAddressPrefix": "VirtualNetwork",
        "destinationAddressPrefixes": [],
        "destinationPortRange": "*",
        "destinationPortRanges": [],
        "direction": "Inbound",
        "etag": "W/\"697feb06-4820-4b92-940f-513cec4f8619\"",
        "id": "/subscriptions/7fb77266-5bb4-4d03-8a91-a744fd38db5c/resourceGroups/rg-nsp-network-dev/providers/Microsoft.Network/networkSecurityGroups/nsg-nsp-test-dev/securityRules/DenyAll",
        "name": "DenyAll",
        "priority": 4096,
        "protocol": "*",
        "provisioningState": "Succeeded",
        "resourceGroup": "rg-nsp-network-dev",
        "sourceAddressPrefix": "VirtualNetwork",
        "sourceAddressPrefixes": [],
        "sourcePortRange": "*",
        "sourcePortRanges": [],
        "type": "Microsoft.Network/networkSecurityGroups/securityRules"
      },
      {
        "access": "Allow",
        "destinationAddressPrefix": "*",
        "destinationAddressPrefixes": [],
        "destinationPortRange": "22",
        "destinationPortRanges": [],
        "direction": "Inbound",
        "etag": "W/\"697feb06-4820-4b92-940f-513cec4f8619\"",
        "id": "/subscriptions/7fb77266-5bb4-4d03-8a91-a744fd38db5c/resourceGroups/rg-nsp-network-dev/providers/Microsoft.Network/networkSecurityGroups/nsg-nsp-test-dev/securityRules/AllowHubSSH",
        "name": "AllowHubSSH",
        "priority": 100,
        "protocol": "Tcp",
        "provisioningState": "Succeeded",
        "resourceGroup": "rg-nsp-network-dev",
        "sourceAddressPrefix": "10.0.1.0/24",
        "sourceAddressPrefixes": [],
        "sourcePortRange": "*",
        "sourcePortRanges": [],
        "type": "Microsoft.Network/networkSecurityGroups/securityRules"
      }
    ],
    "subnets": [
      {
        "id": "/subscriptions/7fb77266-5bb4-4d03-8a91-a744fd38db5c/resourceGroups/RG-NSP-NETWORK-DEV/providers/Microsoft.Network/virtualNetworks/VNET-NSP-SPOKE-DEV/subnets/SNET-TEST",
        "resourceGroup": "RG-NSP-NETWORK-DEV"
      }
    ],
    "tags": {},
    "type": "Microsoft.Network/networkSecurityGroups"
  }
]
